--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ php:
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use --configuration phpunit_$DB.xml
-script: phpunit tests --coverage-text
+script: phpunit --coverage-text tests 
 
 # configure notifications (email, IRC, campfire etc)
